--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script src="sketch.js" type="text/javascript"></script>
     <script src="hexagon.js" type="text/javascript"></script>
     <script src="render.js" type="text/javascript"></script>
+    <script src="gameState.js" type="text/javascript"></script>
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
